# Hydrogen

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: Build.yml
Example01/: CMakeLists.txt
Example01/src/: Main.cpp
Example02/: CMakeLists.txt
Example02/src/: Main.cpp
Example03/: CMakeLists.txt
Example03/src/: Main.cpp
Example04/: CMakeLists.txt
Example04/src/: Main.cpp
Example05/: CMakeLists.txt
Example05/src/: Main.cpp
Example06/: CMakeLists.txt
Example06/assets/shaders/: default_vert.glsl
Example06/src/: Main.cpp
Example07/: CMakeLists.txt
Example07/assets/shaders/: default_vert.glsl
Example07/src/: Main.cpp  Vertex.hpp
Example08/: CMakeLists.txt
Example08/src/: Main.cpp  Shader.cpp
Example09/: CMakeLists.txt
Example09/assets/shaders/: default_frag.glsl  default_vert.glsl
Example09/src/: Main.cpp  Shader.hpp
Example1/: CMakeLists.txt
Example1/src/: Main.cpp
Example10/: CMakeLists.txt
Example10/assets/shaders/: default_vert.glsl  shader.frag  shader.vert  shader_frag.glsl
Example10/src/: Main.cpp  Shader.cpp  Shader.hpp  Vertex.hpp
Example11/: CMakeLists.txt
Example11/assets/shaders/: default_vert.glsl
Example11/src/: Main.cpp  Shader.cpp  Shader.hpp  Vertex.hpp
Example12/: CMakeLists.txt
Example12/assets/shaders/: default_frag.glsl
Example12/src/: Main.cpp  Shader.cpp  Shader.hpp
Example13/: CMakeLists.txt
Example13/assets/shaders/: default_frag.glsl  default_vert.glsl
Example13/src/: Main.cpp  Shader.cpp  Shader.hpp
Example14/: CMakeLists.txt
Example14/assets/shaders/: default_vert.glsl
Example14/src/: Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  EBO.cpp  Main.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.hpp  VBO.inl
Example15/: CMakeLists.txt
Example15/assets/shaders/: default_vert.glsl
Example15/src/: Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  EBO.hpp  EBO.inl  Main.cpp  Plane.cpp  Plane.hpp  Shader.cpp  Shader.hpp  Texture.cpp  VAO.hpp  VBO.cpp  VBO.hpp  VBO.inl
Example16/: CMakeLists.txt
Example16/assets/shaders/: default_frag.glsl  default_vert.glsl  light_frag.glsl
Example16/src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  CameraSettings.hpp  Circle.hpp  Cube.cpp  Cube.hpp  EBO.hpp  EBO.inl  Light.hpp  Logging.hpp  Main.cpp  Plane.cpp  Plane.hpp  Quad.cpp  Quad.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp  VAO.cpp  VAO.hpp  VBO.hpp  VBO.inl  Vertex.hpp
Example16/src/Shapes/: Capsule.cpp  Capsule.hpp  Circle.cpp  Circle.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Plane.cpp  Plane.hpp  Quad.cpp  Quad.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
Example17/: CMakeLists.txt
Example17/assets/shaders/: default_vert.glsl  light_vert.glsl
Example17/src/: Application.cpp  Camera.hpp  EBO.hpp  Light.hpp  Logging.cpp  Logging.hpp  Main.cpp  Material.hpp  Shader.cpp  Texture.hpp  VBO.hpp  VBO.inl
Example17/src/Shapes/: Capsule.cpp  Capsule.hpp  Circle.cpp  Circle.hpp  Cylinder.cpp  Quad.hpp  Sphere.hpp  Triangle.hpp
Example2/: CMakeLists.txt
Example2/src/: Main.cpp
Example3/src/: Main.cpp
Example4/src/: Main.cpp
Example5/: CMakeLists.txt
Example5/src/: Main.cpp
Example6/: CMakeLists.txt
Example6/src/: Main.cpp
Example7/: CMakeLists.txt
Example7/src/: Main.cpp
Example8/: CMakeLists.txt
Example8/src/: Main.cpp  Shader.cpp  Shader.hpp
Example9/: CMakeLists.txt
Example9/assets/shaders/: shader.vert
Example9/src/: Main.cpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Vertex.hpp
examples/: CMakeLists.txt  Example1.cpp  Example2.cpp
examples/Example1/: CMakeLists.txt
examples/Example1/src/: Main.cpp
examples/Example2/: CMakeLists.txt
examples/Example2/src/: Main.cpp
examples/Example3/: CMakeLists.txt
examples/Example3/src/: Main.cpp
examples/Example4/: CMakeLists.txt
examples/Example4/src/: Main.cpp
examples/Example5/: CMakeLists.txt
examples/Example5/src/: Main.cpp
examples/Example6/: CMakeLists.txt
examples/Example6/assets/shaders/: shader.frag  shader.vert
examples/Example6/src/: Main.cpp
examples/Example7/: CMakeLists.txt
examples/Example7/assets/shaders/: shader.frag
examples/Example7/src/: Main.cpp
src/: Main.cpp
