cmake_minimum_required(VERSION 3.26)

cmake_policy(SET CMP0091 NEW)

project(OpenGLSandbox)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (VCPKG_TARGET_TRIPLET MATCHES "-static$")
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
else()
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
endif()

find_package(glad REQUIRED)
find_package(glfw3 REQUIRED)
find_package(glm REQUIRED)
find_package(imgui REQUIRED)
find_package(Stb REQUIRED)

add_subdirectory(Example01)
add_subdirectory(Example02)
add_subdirectory(Example03)
add_subdirectory(Example04)
add_subdirectory(Example05)
add_subdirectory(Example06)
add_subdirectory(Example07)
add_subdirectory(Example08)
add_subdirectory(Example09)
add_subdirectory(Example10)
add_subdirectory(Example11)
add_subdirectory(Example12)
add_subdirectory(Example13)
add_subdirectory(Example14)
